--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "aos": "^2.3.4"
     }
 }
