--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
 APP_NAME=BlogMM
-APP_ENV=production
+APP_ENV=local
+APP_TIMEZONE=America/Sao_Paulo
 APP_KEY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=${APP_URL}
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=${DB_HOST}
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=${DB_DATABASE}
-DB_USERNAME=${DB_USERNAME}
-DB_PASSWORD=${DB_PASSWORD}
+DB_DATABASE=blog
+DB_USERNAME=root
+DB_PASSWORD=1234
 
 FILESYSTEM_DISK=public
 
